svg is the only format for now, make filename of example clearer

--- a/example.html
+++ b/example.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>viz</title>
-    <style>
-      
-    </style>
+    <title>Viz.js</title>
   </head>
   <body>
     
