Added optional engine selection (3rd parameter); other changes
* Used newer Graphviz 2.36
* Used zlib as a submodule
* No unresolved functions during linkage

--- a/example.html
+++ b/example.html
@@ -300,7 +300,7 @@ digraph G {
       function example(id, format) {
         var result;
         try {
-          result = Viz(src(id), format);
+          result = Viz(src(id), format, "dot");
           if (format === "svg")
             return result;
           else
