Remove note about nonexistent neato example

--- a/example.html
+++ b/example.html
@@ -310,7 +310,7 @@ digraph G {
         }
       }
       
-      document.body.innerHTML += "<p>dot examples from the <a href=\"http://graphviz.org/Gallery.php\">Graphviz gallery</a>. neato example from the NEATO User's Manual.</p>"
+      document.body.innerHTML += "<p>dot examples from the <a href=\"http://graphviz.org/Gallery.php\">Graphviz gallery</a>.</p>"
       
       document.body.innerHTML += "<h1>Cluster (svg output)</h1>";
       document.body.innerHTML += example("cluster", "svg");
