Remove web workers example.

--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
-    <script src="../viz.js"></script>
+    <script src="./viz.js"></script>
     <script>
     
     document.body.innerHTML += Viz("digraph { a -> b; }");
