Add osage as an engine option and alphabetize the options.

--- a/index.html
+++ b/index.html
@@ -168,11 +168,12 @@ digraph G {
             <label id="engine">
               Engine:
               <select>
-                <option selected>dot</option>
-                <option>neato</option>
                 <option>circo</option>
-                <option>twopi</option>
+                <option selected>dot</option>
                 <option>fdp</option>
+                <option>neato</option>
+                <option>osage</option>
+                <option>twopi</option>
               </select>
             </label>
             
