--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit Example</title>
+  <title>Viz.js</title>
   <link rel="stylesheet" href="qunit.css">
 </head>
 <body>
