"Graphviz in your browser"

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
     <div id="app">
       <div id="header">
-        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> on the web. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.
+        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> in your browser. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.
       </div>
       <div id="panes">
         <div id="editor"># http://www.graphviz.org/content/cluster
