--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,7 @@
   <script src="qunit.js"></script>
   <script src="input.js"></script>
   <script src="png.js"></script>
+  <script src="svg.js"></script>
   <script src="memory.js"></script>
 </body>
 </html>
