Add QUnit configuration: report test results to Sauce Labs and set a timeout of 60 seconds.

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
   <script src="qunit.js"></script>
+  <script src="config.js"></script>
   <script src="input.js"></script>
   <script src="png.js"></script>
   <script src="svg.js"></script>
