--- a/tests/fabric.html
+++ b/tests/fabric.html
@@ -12,6 +12,9 @@
   <script src="../viz.js"></script>
   <script src="qunit.js"></script>
   <script src="config.js"></script>
+  <script src="input.js"></script>
   <script src="png.js"></script>
+  <script src="svg.js"></script>
+  <script src="memory.js"></script>
 </body>
 </html>
