--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ digraph G {
     </div>
     
     <script src="./js/ace/ace.js"></script>
+    <script src="./bower_components/fabric.js/dist/fabric.min.js"></script>
     <script src="./bower_components/viz.js/viz.js"></script>
     <script>
     
