Add sanity checks for some basic graphs to tests.

--- a/tests/fabric.html
+++ b/tests/fabric.html
@@ -13,6 +13,7 @@
   <script src="qunit.js"></script>
   <script src="config.js"></script>
   <script src="input.js"></script>
+  <script src="graphs.js"></script>
   <script src="png.js"></script>
   <script src="svg.js"></script>
   <script src="memory.js"></script>
