Use a single worker source file, passing configuration in the query. Include a "time" parameter with the output from getTime() to avoid having the browser cache the worker.

--- a/tests/fabric.html
+++ b/tests/fabric.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js</title>
+  <title>Viz.js (Fabric)</title>
   <link rel="stylesheet" href="qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <script>
+  var VIZ_PATH = "../viz.js";
+  </script>
   <script src="fabric.js"></script>
   <script src="../viz.js"></script>
   <script src="qunit.js"></script>
