--- a/tests/index.html
+++ b/tests/index.html
@@ -8,6 +8,9 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <script>
+  var VIZ_PATH = "../viz.js";
+  </script>
   <script src="../viz.js"></script>
   <script src="qunit.js"></script>
   <script src="config.js"></script>
