--- a/tests/lite.html
+++ b/tests/lite.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script>
-  var VIZ_LITE = true;
+  var VIZ_PATH = "../viz.js";
   </script>
   <script src="../viz-lite.js"></script>
   <script src="qunit.js"></script>
