--- a/tests/memory.html
+++ b/tests/memory.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js</title>
+  <title>Viz.js (memory)</title>
   <link rel="stylesheet" href="qunit.css">
 </head>
 <body>
@@ -14,9 +14,6 @@
   <script src="../viz.js"></script>
   <script src="qunit.js"></script>
   <script src="config.js"></script>
-  <script src="input.js"></script>
-  <script src="graphs.js"></script>
-  <script src="png.js"></script>
-  <script src="svg.js"></script>
+  <script src="memory.js"></script>
 </body>
 </html>
