Add JSON to format options.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ digraph G {
               <select>
                 <option selected>svg</option>
                 <option>png-image-element</option>
+                <option>json</option>
                 <option>xdot</option>
                 <option>plain</option>
                 <option>ps</option>
