Add Patreon link.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     #header {
       flex: 0 0 auto;
       -webkit-flex: 0 0 auto;
+      line-height: 1.3;
     }
 
     #panes {
@@ -137,7 +138,7 @@
     
     <div id="app">
       <div id="header">
-        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> in your browser. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.
+        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> in your browser. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.<br><span style="background: yellow;">New:</span> Help make Viz.js better by <a href="https://patreon.com/mdaines">supporting me on Patreon</a>.</a>
       </div>
       <div id="panes">
         <div id="editor"># http://www.graphviz.org/content/cluster
