Add images option.
This allows graphs to refer to images. An array of image paths and dimensions must be specified using the "images" option:

  Viz("digraph { a[image=\"node.png\"]; }", { images: [ { path: "node.png", width: "400px", height: "300px" } ] });

--- a/tests/fabric.html
+++ b/tests/fabric.html
@@ -19,5 +19,6 @@
   <script src="graphs.js"></script>
   <script src="png.js"></script>
   <script src="svg.js"></script>
+  <script src="images.js"></script>
 </body>
 </html>
