--- a/tests/lite.html
+++ b/tests/lite.html
@@ -18,5 +18,6 @@
   <script src="graphs.js"></script>
   <script src="png.js"></script>
   <script src="svg.js"></script>
+  <script src="images.js"></script>
 </body>
 </html>
