Remove Patreon banner.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     
     <div id="app">
       <div id="header">
-        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> in your browser. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.<br><span style="background: yellow;">New:</span> Help make Viz.js better by <a href="https://patreon.com/mdaines">supporting me on Patreon</a>.</a>
+        <b>Viz.js</b> &mdash; <a href="http://www.graphviz.org">Graphviz</a> in your browser. Read more at <a href="https://github.com/mdaines/viz.js">the GitHub repository</a>.
       </div>
       <div id="panes">
         <div id="editor"># http://www.graphviz.org/content/cluster
