--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ digraph G {
     
     <script src="./js/ace/ace.js"></script>
     <script src="./bower_components/fabric.js/dist/fabric.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/split.js@1.3.5/split.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.5.0/dist/svg-pan-zoom.min.js"></script>
+    <script src="./bower_components/Split.js/split.min.js"></script>
+    <script src="./bower_components/svg-pan-zoom/dist/svg-pan-zoom.min.js"></script>
     <script>
 
     var beforeUnloadMessage = null;
