--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@ digraph G {
     </div>
     
     <script src="./js/ace/ace.js"></script>
+    <script src="./bower_components/viz.js/viz.js"></script>
     <script src="./bower_components/fabric.js/dist/fabric.min.js"></script>
     <script src="./bower_components/Split.js/split.min.js"></script>
     <script src="./bower_components/svg-pan-zoom/dist/svg-pan-zoom.min.js"></script>
