--- a/test-browser/memory.html
+++ b/test-browser/memory.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js</title>
-  <link rel="stylesheet" href="qunit.css">
+  <title>Viz.js (Memory)</title>
+  <link rel="stylesheet" href="./vendor/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="./qunit.js"></script>
+  <script src="./vendor/qunit.js"></script>
   <script src="./config.js"></script>
-  <script src="./input.js"></script>
+  <script src="./modules/memory.js"></script>
 </body>
 </html>
