--- a/test-browser/full-fabric.html
+++ b/test-browser/full-fabric.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js (Lite)</title>
+  <title>Viz.js (Full, Fabric)</title>
   <link rel="stylesheet" href="vendor/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../viz-lite.js"></script>
+  <script src="../viz.js"></script>
+  <script src="vendor/fabric.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
   <script src="modules/input.js"></script>
