--- a/test-browser/lite-fabric.html
+++ b/test-browser/lite-fabric.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js (Fabric)</title>
+  <title>Viz.js (Lite, Fabric)</title>
   <link rel="stylesheet" href="vendor/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../viz.js"></script>
+  <script src="../viz-lite.js"></script>
   <script src="vendor/fabric.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
