Add yInvert option. Addresses #118.

--- a/test-browser/full-fabric.html
+++ b/test-browser/full-fabric.html
@@ -17,5 +17,6 @@
   <script src="modules/png.js"></script>
   <script src="modules/svg.js"></script>
   <script src="modules/images.js"></script>
+  <script src="modules/options.js"></script>
 </body>
 </html>
