--- a/test-browser/lite.html
+++ b/test-browser/lite.html
@@ -8,7 +8,8 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../viz-lite.js"></script>
+  <script src="../index.js"></script>
+  <script src="../viz-lite.module.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
   <script src="modules/input.js"></script>
