--- a/test-browser/worker.html
+++ b/test-browser/worker.html
@@ -8,7 +8,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../index.js"></script>
+  <script src="../viz.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
   <script src="modules/worker.js"></script>
