--- a/test-browser/full-fabric.html
+++ b/test-browser/full-fabric.html
@@ -9,6 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
+  <script src="../viz.module"></script>
   <script src="vendor/fabric.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
