--- a/test-browser/lite-fabric.html
+++ b/test-browser/lite-fabric.html
@@ -8,7 +8,8 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../viz-lite.js"></script>
+  <script src="../viz.js"></script>
+  <script src="../viz-lite.module"></script>
   <script src="vendor/fabric.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
