--- a/test-browser/full-polyfill.html
+++ b/test-browser/full-polyfill.html
@@ -2,15 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Viz.js (Lite, Fabric)</title>
+  <title>Viz.js (Full, Fabric)</title>
   <link rel="stylesheet" href="vendor/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="../viz-lite.module"></script>
+  <script src="../viz.module"></script>
   <script src="vendor/fabric.js"></script>
+  <script src="vendor/promise-polyfill.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
   <script src="modules/input.js"></script>
