--- a/test-browser/full-polyfill.html
+++ b/test-browser/full-polyfill.html
@@ -11,6 +11,7 @@
   <script src="../viz.js"></script>
   <script src="../viz.module"></script>
   <script src="vendor/fabric.js"></script>
+  <script src="vendor/fetch.js"></script>
   <script src="vendor/promise-polyfill.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
