--- a/test-browser/lite-polyfill.html
+++ b/test-browser/lite-polyfill.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="../lite.module"></script>
+  <script src="../lite.js.opaque"></script>
   <script src="vendor/fabric.js"></script>
   <script src="vendor/fetch.js"></script>
   <script src="vendor/promise-polyfill.js"></script>
