--- a/test-browser/memory.html
+++ b/test-browser/memory.html
@@ -9,8 +9,9 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="./vendor/qunit.js"></script>
-  <script src="./config.js"></script>
-  <script src="./modules/memory.js"></script>
+  <script src="../full.js.opaque"></script>
+  <script src="vendor/qunit.js"></script>
+  <script src="config.js"></script>
+  <script src="modules/memory.js"></script>
 </body>
 </html>
