--- a/test-browser/full-polyfill.html
+++ b/test-browser/full-polyfill.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="../full.js.opaque"></script>
+  <script src="../full.render.js"></script>
   <script src="vendor/fabric.js"></script>
   <script src="vendor/fetch.js"></script>
   <script src="vendor/promise-polyfill.js"></script>
