--- a/test-browser/lite.html
+++ b/test-browser/lite.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../viz.js"></script>
-  <script src="../lite.js.opaque"></script>
+  <script src="../lite.render.js"></script>
   <script src="vendor/qunit.js"></script>
   <script src="config.js"></script>
   <script src="modules/input.js"></script>
