Don't include Nop option in lite tests (no neato!)

--- a/test-browser/full.html
+++ b/test-browser/full.html
@@ -18,5 +18,6 @@
   <script src="modules/svg.js"></script>
   <script src="modules/images.js"></script>
   <script src="modules/options.js"></script>
+  <script src="modules/neato.js"></script>
 </body>
 </html>
