--- a/test-browser/full-polyfill.html
+++ b/test-browser/full-polyfill.html
@@ -20,5 +20,6 @@
   <script src="modules/svg.js"></script>
   <script src="modules/images.js"></script>
   <script src="modules/options.js"></script>
+  <script src="modules/neato.js"></script>
 </body>
 </html>
