--- a/examples/parcel/index.html
+++ b/examples/parcel/index.html
@@ -2,11 +2,11 @@
 <meta charset="utf8">
 
 <script type="module">
-  
-  import("../../lib/viz.js")
+
+  import("@viz-js/viz")
     .then(module => module.instance())
     .then(viz => {
       document.body.appendChild(viz.renderSVGElement("digraph { a -> b }"));
     });
-  
+
 </script>
