--- a/examples/script-tag/index.html
+++ b/examples/script-tag/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf8">
 
-<script src="../../lib/viz.js"></script>
+<script src="../../lib/viz-standalone.js"></script>
 <script>
   
   Viz.instance().then(function(viz) {
