--- a/examples/tester/index.html
+++ b/examples/tester/index.html
@@ -71,7 +71,7 @@ digraph { a -> b }
   </tr>
 </table>
 
-<script src="../../lib/viz-standalone.js"></script>
+<script src="../../packages/viz/lib/viz-standalone.js"></script>
 <script>
 
   var viz;
