Remove note about build products in examples
These should use the NPM versions, so we don't need to build in packages/viz before using them.

--- a/packages/examples/script-tag/index.html
+++ b/packages/examples/script-tag/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf8">
 
-<script src="../../viz/lib/viz-standalone.js"></script>
+<script src="./node_modules/@viz-js/viz/lib/viz-standalone.js"></script>
 <script>
   
   Viz.instance().then(function(viz) {
