Set width/height on logo

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -10,7 +10,7 @@
 
 <div class="wrap">
   <header>
-    <img src="./logo.svg" class="logo" alt="Viz.js">
+    <img src="./logo.svg" class="logo" alt="Viz.js" width="70" height="32">
     <p><a href="https://graphviz.org">Graphviz</a> in your browser!</p>
 
     <nav>
