Set lang and fix charset

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf8">
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Viz.js</title>
 <link rel="stylesheet" href="./src/style.css">
