Changed img placeholder

--- a/packages/examples/images/index.html
+++ b/packages/examples/images/index.html
@@ -4,20 +4,20 @@
 <script src="./node_modules/@viz-js/viz/lib/viz-standalone.js"></script>
 <script>
 
-  Viz.instance().then(function(viz) {
+Viz.instance().then(function(viz) {
     document.body.appendChild(viz.renderSVGElement(`digraph {
 
       a -> b
 
       a [label=<<table>
-        <tr><td>Image:</td></tr>
-        <tr><td><img src="https://picsum.photos/id/238/100/100"/></td></tr>
+        <tr><td>Image inside table:</td></tr>
+        <tr><td><img src="https://picsum.photos/id/184/200/200"/></td></tr>
       </table>>]
 
       b [image="https://picsum.photos/id/250/200/100"]
 
     }`, {images: [
-      {path: 'https://picsum.photos/id/238/100/100', width: 100, height: 100},
+      {path: 'https://picsum.photos/id/184/200/200', width: 200, height: 200},
       {path: 'https://picsum.photos/id/250/200/100', width: 200, height: 100},
     ]}));
   });
