Add API docs page

--- a/packages/website/src/index.html
+++ b/packages/website/src/index.html
@@ -4,17 +4,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Viz.js</title>
-<link rel="stylesheet" href="./src/style.css">
+<link rel="stylesheet" href="./styles/app.css">
 </head>
 <body>
 
 <div class="wrap">
   <header>
-    <img src="./logo.svg" class="logo" alt="Viz.js" width="70" height="32">
-    <p><a href="https://graphviz.org">Graphviz</a> in your browser!</p>
+    <a href="/"><img src="./images/logo.svg" class="logo" alt="Viz.js" width="70" height="32"></a>
 
     <nav>
       <ul>
+        <li><a href="/api">API</a></li>
         <li><a href="https://github.com/mdaines/viz-js">GitHub</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<script type="module" src="./src/index.jsx"></script>
+<script type="module" src="./index.jsx"></script>
 
 </body>
 </html>
